src/main/resources/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: clipservice
    version: v1
  name: clipservice-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clipservice
      version: v1
  template:
    metadata:
      labels:
        app: clipservice
        version: v1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/scheme: "http"
    spec:
      containers:
        - name: clipservice
          image: "gcr.io/content-eng-qa/clipservicev1:latest"
