src/main/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clipservice
spec:
  type: LoadBalancer
  selector:
    app: clipservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
