src/main/resources/newVirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: clipservice
spec:
  hosts:
    - clipservice
  http:
    - match:
        - headers:
            baggage-user-agent:
              regex: .*Safari.*
      route:
        - destination:
            host: clipservice
            subset: version-v2
    - route:
        - destination:
            host: clipservice
            subset: version-v1
---
