src/main/resources/virtual-service-clipservice-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: clipservice
spec:
  hosts:
    - clipservice
  http:
    - route:
        - destination:
            host: clipservice
            subset: version-v2
          weight: 100
---
